--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Rock Paper Scissor Game</title>
   </head>
   <body>
@@ -18,7 +19,7 @@
     <p id="scores">
       Your score:
       <span id="user-score">0</span>
-      Computer score:<span id="computer-score">0</span>
+      Computer score:<span id="computer-score"> 0</span>
     </p>
   </body>
 </html>
