--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
       <button id="paper">&#128400;&#65039;</button>
       <button id="scissor">&#9996;&#65039;</button>
     </div>
+
     <p id="result">You Won</p>
     <p id="scores">
       Your score:
       <span id="user-score">0</span>
       Computer score:<span id="computer-score"> 0</span>
     </p>
+    <script src="app.js"></script>
   </body>
 </html>
